--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pimarinov/waveform-generator",
-    "description": "Waveform Generator - Jiminny Backend Task by Plamen Marinov",
+    "description": "Waveform Generator - Backend Task by Plamen Marinov",
     "type": "project",
     "license": "MIT",
     "authors": [
