--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - restore_cache:
           keys:
             - node-v1-{{ checksum "package.json" }}
-            - node-v1-
+            # - node-v1-
       - run: yarn install
       - save_cache:
           key: node-v1-{{ checksum "package.json" }}
