--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
       - checkout
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: pecl install -f xdebug -y
-      - run: sudo docker-php-ext-install zip
+      - run: sudo -E install-php-extensions xdebug zip
+      # - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-enable xdebug
       - run: echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/xdebug.ini
 
