--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,10 @@ jobs:
       - checkout
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo -E install-php-extensions xdebug zip
+      - run: sudo -E install-php-extensions xdebug
       # - run: sudo docker-php-ext-install zip
       - run: sudo docker-php-ext-enable xdebug
-      - run: echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/xdebug.ini
+      - run: echo "xdebug.mode=coverage" >> /usr/local/lib/php/conf.d/xdebug.ini
 
       # prepare the database
       # - run: touch storage/testing.sqlite
