circleci config change

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: sudo -E install-php-extensions xdebug
       # - run: sudo docker-php-ext-install zip
-      - run: sudo docker-php-ext-enable xdebug
+      # - run: sudo docker-php-ext-enable xdebug
       # - run: echo "xdebug.mode=coverage" >> /usr/local/lib/php/conf.d/xdebug.ini
 
       # prepare the database
