--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       - checkout
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
+      - run: composer self-update
       # - run: sudo -E install-php-extensions xdebug
       # - run: sudo docker-php-ext-install zip
       # - run: sudo docker-php-ext-enable xdebug
@@ -37,6 +38,6 @@ jobs:
       # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
       # run tests with phpunit or codecept
-      - run: /home/circleci/project/vendor/bin/phpunit
+      - run: vendor/bin/phpunit
       # - run: ./vendor/bin/codecept build
       # - run: ./vendor/bin/codecept run
