--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - checkout
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: composer self-update
+      - run: composer install
       # - run: sudo -E install-php-extensions xdebug
       # - run: sudo docker-php-ext-install zip
       # - run: sudo docker-php-ext-enable xdebug
