--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,16 +28,16 @@ jobs:
 
       - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
       - run: composer install
-      # - run: sudo -E install-php-extensions xdebug
+      - run: sudo -E install-php-extensions xdebug
       # - run: sudo docker-php-ext-install zip
       # - run: sudo docker-php-ext-enable xdebug
-      # - run: echo "xdebug.mode=coverage" >> /usr/local/lib/php/conf.d/xdebug.ini
+      - run: echo "xdebug.mode=coverage" >> /usr/local/lib/php/conf.d/xdebug.ini
 
       # prepare the database
       # - run: touch storage/testing.sqlite
       # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
       # run tests with phpunit or codecept
-      - run: vendor/bin/phpunit
+      - run: ./vendor/bin/phpunit
       # - run: ./vendor/bin/codecept build
       # - run: ./vendor/bin/codecept run
