--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,9 @@ jobs:
       # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
       # run tests with phpunit or codecept
-      - run: ./vendor/bin/phpunit
+      - run: 
+        command: ./vendor/bin/phpunit
+        environment:
+            XDEBUG_MODE: coverage
       # - run: ./vendor/bin/codecept build
       # - run: ./vendor/bin/codecept run
