another config change attempt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,7 @@ jobs:
       # - run: php artisan migrate --env=testing --database=sqlite_testing --force
 
       # run tests with phpunit or codecept
-      - run: 
-        command: ./vendor/bin/phpunit
+      - run: ./vendor/bin/phpunit
         environment:
             XDEBUG_MODE: coverage
       # - run: ./vendor/bin/codecept build
