--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,11 @@ jobs:
       # prepare the database
       # - run: touch storage/testing.sqlite
       # - run: php artisan migrate --env=testing --database=sqlite_testing --force
+      - run:
+          environment:
+            XDEBUG_MODE: coverage
 
       # run tests with phpunit or codecept
       - run: ./vendor/bin/phpunit
-        environment:
-            XDEBUG_MODE: coverage
       # - run: ./vendor/bin/codecept build
       # - run: ./vendor/bin/codecept run
