--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run: composer install
       - run: sudo -E install-php-extensions xdebug
       # - run: sudo docker-php-ext-install zip
-      - run: sudo docker-php-ext-enable xdebug
+      # - run: sudo docker-php-ext-enable xdebug
       # - run: echo "xdebug.mode=coverage" >> /usr/local/lib/php/conf.d/xdebug.ini
 
       # prepare the database
